--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -23,6 +23,9 @@
         </section>
 
         <section>
+          <p id = "error"></p>
+        </section>
+        <section id="'results">
           <strong>Form Results:</strong>
           <div id="text"></div>
           <div id="agreement"></div>
@@ -33,14 +36,7 @@
         </section>
       </div>
     </main>
-    <script>
-      // Check that service workers are supported
-      // if ('serviceWorker' in navigator) {
-      //   // Use the window load event to keep the page load performant
-      //   window.addEventListener('load', () => {
-      //     navigator.serviceWorker.register('/service-worker.js')
-      //   })
-      // }
+    <script src="../../../dist/bundle.js">
     </script>
   </body>
 </html>
