--- a/src/client/styles/style.scss
+++ b/src/client/styles/style.scss
@@ -119,3 +119,11 @@ footer p {
   margin: 0;
   font-size: 1rem;
 }
+
+#error {
+  background-color: $secondary-color;
+  color: #fff;
+  border-radius: 10px;
+  padding: 10px 20px;
+  text-align: center;
+}
